syntax = "proto3";
package sonrhq.sonr.common;

option go_package = "github.com/sonr-io/sonr/types/common";

// Basic Info Sent to Peers to Establish Connections
message PeerInfo {
  string id = 1;       // User Sonr Account Decentralized ID
  string name = 2;     // User Defined Label for Peer, also known as PartyID
  string peer_id = 3;  // Peer ID
  string multiaddr = 4; // Peer Multiaddress
}


message WalletInfo {
  // Controller is the associated Sonr address.
  string controller = 1;

  // DiscoverPaths is a list of all known hardened coin type paths.
  repeated int32 discovered_paths = 2;

  // Algorithm is the algorithm of the wallet. CMP is the default.
  string algorithm = 3;

  // CreatedAt is the time the wallet was created.
  int64 created_at = 4;

  // LastUpdated is the last time the wallet was updated.
  int64 last_updated = 5;
}
